--- a/css/planetario.css
+++ b/css/planetario.css
@@ -30,6 +30,11 @@
     font-size: large;
 }
 
+#cabeçalho a:hover {
+    color: yellow;
+    font-size: 18px; 
+}
+
 body {
     margin: 0;
     min-height: 100vh;
