--- a/css/ZooStyle.css
+++ b/css/ZooStyle.css
@@ -1,278 +1,304 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #001f3f;
+  background-color: #001f3f;
 }
+
 #cabeçalho {
-    background-color: black;
-    padding: 3%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: sticky;
-    top: 0;
+  background-color: black;
+  padding: 3%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: sticky;
+  top: 0;
 }
 
 #logo {
-    margin: 0 5%;
-    height: auto;
-    width: 30px;
+  margin: 0 5%;
+  height: auto;
+  width: 30px;
 }
 
 #cabeçalho a {
-    margin: 0 5%;
-    text-decoration: none;
-    color: aliceblue;
-    font-weight: bold;
-    font-family: Arial, sans-serif;
-    font-size: large;
+  margin: 0 5%;
+  text-decoration: none;
+  color: aliceblue;
+  font-weight: bold;
+  font-family: Arial, sans-serif;
+  font-size: large;
 }
 
 #cabeçalho a:hover {
-    color: yellow;
-    font-size: 18px; 
+  color: yellow;
+  font-size: 18px;
+}
+
+#boxAnimals {
+  display: inline;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px;
+}
+
+#boxAnimals a {
+  text-decoration: none;
 }
 
 .home {
-  color: black;
+  color: white;
   text-decoration: none;
   font-size: 18px;
-  text-shadow: 2px 2px yellow;
+  text-align: center;
+  padding: 0.5%;
+  border: 5px solid silver;
+  border-radius: 8px;
+  width: 200px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  background-color: black;
 }
 
-.home:hover{
+.home:hover {
   color: red;
   text-decoration: underline;
 }
 
-.zoo-title{
-    text-align: center;
-    text-decoration: none;
-    font-size: 100px;
-    color: white;
-    
+.zoo-title {
+  text-align: center;
+  text-decoration: none;
+  font-size: 100px;
+  color: white;
+
 }
 
-.boxText{
-    font-size: 70px;
-    text-align: center;
-    text-decoration: none;
-    color: black;
+.boxText {
+  font-size: 70px;
+  text-align: center;
+  text-decoration: none;
+  color: black;
 }
 
-.boxText:hover{
+.boxText:hover {
   color: red;
   text-decoration: underline;
 }
 
-.boxAves  {
-      width: 70%; 
-      height: 200px;
-      border: 2px solid #333;
-      border-radius: 8px;
-      overflow: hidden;
-      background-image: url('../img/img_zoologico/Sky.webp');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      margin: 20px;
-      display: grid;
-      align-items: center;
-      grid-template-columns: minmax(0, 50%) minmax(0, 50%);
-      column-gap: 5px;
-    }
+.boxAves {
+  width: 70%;
+  height: 200px;
+  border: 2px solid #333;
+  border-radius: 100px 10px 100px 10px;
+  overflow: hidden;
+  background-image: url('../img/img_zoologico/Sky.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin: 20px;
+  display: grid;
+  align-items: center;
+  grid-template-columns: minmax(0, 50%) minmax(0, 50%);
+  column-gap: 5px;
+}
 
-    .boxAves:hover {
-        border: 6px solid yellow;
-    }
+.boxAves:hover {
+  border: 6px solid yellow;
+}
 
-    .boxImageAves{
-    max-width: 100%;
-    max-height: 200%;
-    overflow: hidden;
-    }
+.boxImageAves {
+  max-width: 100%;
+  max-height: 200%;
+  overflow: hidden;
+}
 
-.boxMammals  {
-      width: 70%; 
-      height: 200px;
-      border: 2px solid #333;
-      border-radius: 8px;
-      overflow: hidden;
-      background-image: url('../img/img_zoologico/GreenHills.webp');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      margin: 20px;
-      display: grid;
-      align-items: center;
-      grid-template-columns: minmax(0, 80%) minmax(0, 20%);
-      column-gap: 5px;
-    }
+.boxMammals {
+  width: 70%;
+  height: 200px;
+  border: 2px solid #333;
+  border-radius: 10px 100px 10px 100px;
+  overflow: hidden;
+  background-image: url('../img/img_zoologico/GreenHills.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin: 20px 20px 20px 25%;
+  display: grid;
+  align-items: center;
+  grid-template-columns: minmax(0, 80%) minmax(0, 20%);
+  column-gap: 5px;
+}
 
-    .boxMammals:hover {
-        border: 6px solid yellow;
-    }
+.boxMammals:hover {
+  border: 6px solid yellow;
+}
 
-    .boxImageMammals{
-    max-width: 100%;
-    max-height: 300%;
-    overflow: hidden;
-    }
+.boxImageMammals {
+  max-width: 100%;
+  max-height: 300%;
+  overflow: hidden;
+}
 
-.boxReptiles  {
-      width: 70%; 
-      height: 200px;
-      border: 2px solid #333;
-      border-radius: 8px;
-      overflow: hidden;
-      background-image: url('../img/img_zoologico/DesertHills.webp');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      margin: 20px;
-      display: grid;
-      align-items: center;
-      grid-template-columns: minmax(0, 50%) minmax(0, 50%);
-      column-gap: 5px;
-    }
+.boxReptiles {
+  width: 70%;
+  height: 200px;
+  border: 2px solid #333;
+  border-radius: 100px 10px 100px 10px;
+  overflow: hidden;
+  background-image: url('../img/img_zoologico/DesertHills.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin: 20px;
+  display: grid;
+  align-items: center;
+  grid-template-columns: minmax(0, 50%) minmax(0, 50%);
+  column-gap: 5px;
+}
 
-    .boxReptiles:hover {
-        border: 6px solid yellow;
-    }
+.boxReptiles:hover {
+  border: 6px solid yellow;
+}
 
-    .boxImageReptiles{
-    max-width: 100%;
-    max-height: 100%;
-    overflow: hidden;
-    }
+.boxImageReptiles {
+  max-width: 100%;
+  max-height: 100%;
+  overflow: hidden;
+}
 
 
-.boxAmphibious  {
-      width: 70%; 
-      height: 200px;
-      border: 2px solid #333;
-      border-radius: 8px;
-      overflow: hidden;
-      background-image: url('../img/img_zoologico/Swamp.webp');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      margin: 20px;
-      display: grid;
-      align-items: center;
-      grid-template-columns: minmax(0, 50%) minmax(0, 50%);
-      column-gap: 5px;
-    }
+.boxAmphibious {
+  width: 70%;
+  height: 200px;
+  border: 2px solid #333;
+  border-radius: 10px 100px 10px 100px;
+  overflow: hidden;
+  background-image: url('../img/img_zoologico/Swamp.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin: 20px 20px 20px 25%;
+  display: grid;
+  align-items: center;
+  grid-template-columns: minmax(0, 50%) minmax(0, 50%);
+  column-gap: 5px;
+}
 
-    .boxAmphibious:hover {
-        border: 6px solid yellow;
-    }
+.boxAmphibious:hover {
+  border: 6px solid yellow;
+}
 
-    .boxImageAmphibious{
-    max-width: 200%;
-    max-height: 200%;
-    overflow: hidden;
-    }
+.boxImageAmphibious {
+  max-width: 200%;
+  max-height: 200%;
+  overflow: hidden;
+}
 
-.boxArthropods  {
-      width: 70%; 
-      height: 200px;
-      border: 2px solid #333;
-      border-radius: 8px;
-      overflow: hidden;
-      background-image: url('../img/img_zoologico/FallenLog.webp');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      margin: 20px;
-      display: grid;
-      align-items: center;
-      grid-template-columns: minmax(0, 50%) minmax(0, 50%);
-      column-gap: 5px;
-    }
+.boxArthropods {
+  width: 70%;
+  height: 200px;
+  border: 2px solid #333;
+  border-radius: 100px 10px 100px 10px;
+  overflow: hidden;
+  background-image: url('../img/img_zoologico/FallenLog.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin: 20px;
+  display: grid;
+  align-items: center;
+  grid-template-columns: minmax(0, 50%) minmax(0, 50%);
+  column-gap: 5px;
+}
 
-    .boxArthropods:hover {
-        border: 6px solid yellow;
-    }
+.boxArthropods:hover {
+  border: 6px solid yellow;
+}
 
-    .boxImageArthropods{
-    max-width: 100%;
-    max-height: 100%;
-    overflow: hidden;
-    }
+.boxImageArthropods {
+  max-width: 100%;
+  max-height: 100%;
+  overflow: hidden;
+}
 
-.boxButterflies  {
-      width: 70%; 
-      height: 200px;
-      border: 2px solid #333;
-      border-radius: 8px;
-      overflow: hidden;
-      background-image: url('../img/img_zoologico/DewLeaf.webp');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      margin: 20px;
-      display: grid;
-      align-items: center;
-      grid-template-columns: minmax(0, 50%) minmax(0, 50%);
-      column-gap: 5px;
-    }
+.boxButterflies {
+  width: 70%;
+  height: 200px;
+  border: 2px solid #333;
+  border-radius: 10px 100px 10px 100px;
+  overflow: hidden;
+  background-image: url('../img/img_zoologico/DewLeaf.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin: 20px 20px 20px 25%;
+  display: grid;
+  align-items: center;
+  grid-template-columns: minmax(0, 50%) minmax(0, 50%);
+  column-gap: 5px;
+}
 
-    .boxButterflies:hover {
-        border: 6px solid yellow;
-    }
+.boxButterflies:hover {
+  border: 6px solid yellow;
+}
 
-    .boxImageButterflies{
-    max-width: 100%;
-    max-height: 100%;
-    overflow: hidden;
-    }
+.boxImageButterflies {
+  max-width: 100%;
+  max-height: 100%;
+  overflow: hidden;
+}
 
-    .BoxImageStandard{
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-    }
+.BoxImageStandard {
+  width: 350px;
+  height: auto;
+  object-fit: cover;
+}
 
-    .BoxStandardLeft  {
-      width: 95%;
-      height: 400px;
-      border: 4px solid #333;
-      border-radius: 8px;
-      overflow: auto;
-      background-color: aquamarine;
-      margin: 20px;
-      display: grid;
-      align-items: left;
-      grid-template-columns: minmax(0, 30%) minmax(0, 70%);
-      column-gap: 5px;
-    }
+.BoxStandardLeft {
+  width: fit-content;
+  height: auto;
+  border: 4px solid #333;
+  border-radius: 8px;
+  overflow: auto;
+  background-color: aquamarine;
+  margin: 20px 35% 20px 20px;
+  padding: 25px;
+  display: grid;
+  align-items: left;
+  grid-template-columns: minmax(0, 30%) minmax(0, 70%);
+  column-gap: 5px;
+}
 
-    .BoxStandrdTextLeft{
-        text-align: left;
-        font-size: 30px;
-    }
+.BoxStandrdTextLeft {
+  text-align: left;
+  font-size: 25px;
+  padding: 0 20px 0 20px;
+}
 
-    .BoxStandardRight  {
-      width: 95%;
-      height: 300px;
-      border: 4px solid #333;
-      border-radius: 8px;
-      overflow: auto;
-      background-color: aquamarine;
-      margin: 20px;
-      display: grid;
-      align-items: Right;
-      grid-template-columns: minmax(0, 70%) minmax(0, 30%);
-      column-gap: 5px;
-    }
+.BoxStandardRight {
+  width: fit-content;
+  height: auto;
+  border: 4px solid #333;
+  border-radius: 8px;
+  overflow: auto;
+  background-color: aquamarine;
+  margin: 20px 20px 20px 35%;
+  padding: 25px;
+  display: grid;
+  align-items: Right;
+  grid-template-columns: minmax(0, 70%) minmax(0, 30%);
+  column-gap: 5px;
+}
 
-    .BoxStandrdTextRight{
-        text-align: right;
-        font-size: 30px;
-    }
+.BoxStandrdTextRight {
+  text-align: left;
+  font-size: 25px;
+  padding: 0 20px 0 20px;
+}
