agora o header e adaptado para pequenas telas

--- a/css/planetario.css
+++ b/css/planetario.css
@@ -6,7 +6,7 @@
 
 #cabeçalho {
     background-color: black;
-    padding: 30px;
+    padding: 1%;
     color: white;
     display: flex;
     align-items: center;
