--- a/css/home.css
+++ b/css/home.css
@@ -10,33 +10,133 @@ body {
 
 #cabeçalho {
     background-color: black;
-    padding: 3%;
+    padding: 15px 5%;
     color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     position: sticky;
     top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#cabeçalho:hover {
+    text-decoration: none;
 }
 
 #logo {
-    margin: 0 5%;
+    margin: 0;
     height: auto;
     width: 30px;
+    position: static;
+    left: -2.5%;
+    top: 3%;
 }
 
-#cabeçalho a {
-    margin: 0 5%;
+#menuFlutuanteCheckbox{
+    display: none;
+}
+
+#menuFlutuante{
+    display: none;
+    cursor: pointer;
+}
+
+.bar{
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5% auto;
+    background-color: #001f3f;
+    transition: all 0.3s ease-in-out;
+}
+
+#menu-overlay {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9; 
+    background-color: rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+}
+
+#linksHeader {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    flex-grow: 1;
+}
+
+#linksHeader a:not(:last-child)::after {
+    content: "|";
+    margin-left: 20%; 
+    color: aliceblue;
+    font-weight: normal; 
+}
+
+#linksHeader a {
+    margin: 0 2%;
     text-decoration: none;
     color: aliceblue;
     font-weight: bold;
     font-family: Arial, sans-serif;
     font-size: large;
+    width: fit-content;
+
 }
 
-#cabeçalho a:hover {
+#linksHeader a:hover {
     color: yellow;
     font-size: 18px;
+}
+
+@media (max-width: 1050px) {
+    #menu-overlay {
+        display: block;
+        visibility: hidden; 
+        opacity: 0;
+        transition: visibility 0s 0.3s, opacity 0.3s ease-in-out;
+    }
+    #menuFlutuanteCheckbox:checked ~ #menu-overlay {
+        visibility: visible;
+        opacity: 1;
+        transition-delay: 0s;
+    }
+    #menuFlutuante {
+        display: block;
+    }
+    #linksHeader {
+        position: fixed;
+        top: 60px;
+        left: -100%;
+        width: 70%;
+        height: calc(100vh - 60px);
+        background-color: #001f3f;
+        flex-direction: column;
+        justify-content: flex-start;
+        padding-top: 20px;
+        transition: left 0.3s ease-in-out;
+        z-index: 10;
+        width: 100%;
+    }
+    #linksHeader a {
+        margin: 15px 0;
+        padding: 10px 20px;
+        width: 100%;
+        box-sizing: border-box;
+        text-align: center;
+        border-bottom: 1px solid #ccc;
+    }
+    #linksHeader a::after {
+        content: none !important;
+    }
+    #menuFlutuanteCheckbox:checked ~ #linksHeader {
+        left: 0;
+    }
 }
 
 #pagina-inicial {
