--- a/css/nicolandia.css
+++ b/css/nicolandia.css
@@ -57,7 +57,7 @@ body {
 }
 
 .Bloco {
-    margin: 100px;
+    margin: 10%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #ffffff;
     background-color: #001f3f;
@@ -66,6 +66,6 @@ body {
 }
 
 .Imagens {
-    height: 221px;
+    height: 225px;
     border-radius: 15px;
 }
