--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* ---------------------------------- */
 /* ------- Estilos do Gerais -------- */
 /* ---------------------------------- */
-* {
+*, body, html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -9,6 +9,7 @@
 
 body {
     background-color: #001f3f;
+    font-family: Arial, sans-serif;
 }
 
 #cabeçalho {
@@ -76,7 +77,7 @@ body {
 
 #linksHeader a:not(:last-child)::after {
     content: "|";
-    margin-left: 20%; 
+    margin: 0 25%; 
     color: aliceblue;
     font-weight: normal; 
 }
@@ -149,15 +150,120 @@ body {
     color: aliceblue;
     font-weight: bolder;
     font-size: xx-large;
+    margin-bottom: 200px;
+    cursor: default;
 }
 
 #map-image {
-    width: 50%;
+    width: 35%;
     height: auto;
     padding: 2%;
     border-radius: 150px 75px;
 }
 
+#footer-content {
+    display: flex;
+    background-color: #002f5e;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 200px;
+    position: fixed;
+    bottom: 0;
+    color: whitesmoke;
+    font-size: larger;
+    text-align: center;
+    padding: 10px 0;
+    cursor: default;
+}
+
+#easterEgg {
+    position: relative; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.imgHover {
+    position: absolute;
+    left: 100%; 
+    top: 50%;
+    transform: translateY(-50%);
+    width: 35%; 
+    height: auto;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out; 
+    z-index: 20;
+    margin: 5% 0 0 20%;
+  }
+
+.footerLink:hover + .imgHover {
+    opacity: 1;
+    left: calc(100% + 5px);
+}
+
+.footerLink {
+    color: whitesmoke;
+    text-decoration: none;
+    font-size: 15px;
+    padding: 0.5% 2%;
+    width: 250px;
+    margin: 0 25%;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s ease;
+}
+
+.footerLink:hover {
+    animation: rainbow 2s infinite;
+    background-color: #001f3f;
+}
+
+#rights {
+    font-size: 15px;
+}
+
+@keyframes rainbow {
+  100%,
+  0% {
+    color: rgb(255, 0, 0);
+  }
+  8% {
+    color: rgb(255, 127, 0);
+  }
+  16% {
+    color: rgb(255, 255, 0);
+  }
+  25% {
+    color: rgb(127, 255, 0);
+  }
+  33% {
+    color: rgb(0, 255, 0);
+  }
+  41% {
+    color: rgb(0, 255, 127);
+  }
+  50% {
+    color: rgb(0, 255, 255);
+  }
+  58% {
+    color: rgb(0, 127, 255);
+  }
+  66% {
+    color: rgb(0, 0, 255);
+  }
+  75% {
+    color: rgb(127, 0, 255);
+  }
+  83% {
+    color: rgb(255, 0, 255);
+  }
+  91% {
+    color: rgb(255, 0, 127);
+  }
+}
 /* ---------------------------------- */
 /* --- Estilos do Planetário - ------ */
 /* ---------------------------------- */
@@ -172,7 +278,7 @@ body {
     font-family: Arial, sans-serif;
 }
 
-#title {
+.title {
     background-color: white;
     color: #001f3f;
     text-align: center;
@@ -180,9 +286,9 @@ body {
     border-radius: 10px;
     max-width: 800px;
     margin: 20px auto;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 4px 4px 25px rgba(0, 0, 0, 0.2);
+    font-size: 45px;
 }
-
 
 .planetario-text {
     background-color: white;
@@ -552,4 +658,27 @@ body {
   text-align: left;
   font-size: 25px;
   padding: 0 20px 0 20px;
+}
+
+/* ---------------------------------- */
+/* ------ Estilos do Catedral ------- */
+/* ---------------------------------- */
+
+#catedralBody {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
+    color: white;
+}
+
+#catedralBody p {
+    max-width: 800px;
+    background-color: aliceblue;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 18px;
+    color: black;
 }
