--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ body {
     align-items: center;
     width: 100%;
     height: 200px;
-    position: fixed;
+    position: flex;
     bottom: 0;
     color: whitesmoke;
     font-size: larger;
@@ -455,7 +455,7 @@ body {
   border: 2px solid #333;
   border-radius: 100px 10px 100px 10px;
   overflow: hidden;
-  background-image: url('../img/img_zoologico/Sky.webp');
+  background-image: url('./img/img_zoologico/Sky.webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -482,7 +482,7 @@ body {
   border: 2px solid #333;
   border-radius: 10px 100px 10px 100px;
   overflow: hidden;
-  background-image: url('../img/img_zoologico/GreenHills.webp');
+  background-image: url('./img/img_zoologico/GreenHills.webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -509,7 +509,7 @@ body {
   border: 2px solid #333;
   border-radius: 100px 10px 100px 10px;
   overflow: hidden;
-  background-image: url('../img/img_zoologico/DesertHills.webp');
+  background-image: url('./img/img_zoologico/DesertHills.webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -537,7 +537,7 @@ body {
   border: 2px solid #333;
   border-radius: 10px 100px 10px 100px;
   overflow: hidden;
-  background-image: url('../img/img_zoologico/Swamp.webp');
+  background-image: url('./img/img_zoologico/Swamp.webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -564,7 +564,7 @@ body {
   border: 2px solid #333;
   border-radius: 100px 10px 100px 10px;
   overflow: hidden;
-  background-image: url('../img/img_zoologico/FallenLog.webp');
+  background-image: url('./img/img_zoologico/FallenLog.webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -591,7 +591,7 @@ body {
   border: 2px solid #333;
   border-radius: 10px 100px 10px 100px;
   overflow: hidden;
-  background-image: url('../img/img_zoologico/DewLeaf.webp');
+  background-image: url('./img/img_zoologico/DewLeaf.webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
