--- a/style.css
+++ b/style.css
@@ -839,7 +839,46 @@ body {
 /* ------ Estilos do Esplanada ------ */
 /* ---------------------------------- */
 
-.imagem-esplanada {
-    width: 100%;
-    border-radius: 100%;
+#fundo{
+  background-image: url("img/img_esplanada/fundo\ body.png");
+  background-attachment: unset; 
+  background-size: cover; 
+  background-position: center; 
+  
+  
+  
+}
+
+/* imagem */
+.imagem-esplanada{
+    width: 300px;
+    height: 200px;
+    border-radius: 20px;     
+}
+/* texto */
+.Bloco{
+    margin: 90px;
+    flex-wrap: unset;
+    
+}
+.cabeca{
+    background-color:cornsilk;
+    height: 200px;
+    border-radius: 40px 40px 10px 40px;
+    display: table;
+}
+.titulo{
+    color: cornsilk;
+    background-color: black; 
+    border-radius: 47px 40px 0 0; 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;    
+} 
+.texto{
+    color:black;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 12px;
+}
+.texto2{
+    color:black;
+    font-style: unset;
 }
