--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   font-size: 100%;
   color: white;
-  font-family: Arial, sans-serif;
+  font-family: 'Open Sans', Lato, Roboto, sans-serif;
 }
 
 body,
@@ -92,7 +92,6 @@ html {
   text-decoration: none;
   color: aliceblue;
   font-weight: bold;
-  font-family: Arial, sans-serif;
   font-size: large;
   width: fit-content;
 
@@ -157,7 +156,6 @@ html {
 #pagina-inicial {
   padding: 2% 2%;
   text-align: center;
-  font-family: Arial, sans-serif;
   color: aliceblue;
   font-weight: bolder;
   font-size: xx-large;
@@ -296,7 +294,6 @@ html {
   background: linear-gradient(135deg, #001f3f, #003366, #004080);
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: Arial, sans-serif;
 }
 
 .title {
@@ -403,7 +400,7 @@ html {
 }
 
 /* ---------------------------------- */
-/* --- Estilos do Zoológico - ------- */
+/* ----- Estilos do Zoológico ------- */
 /* ---------------------------------- */
 
 #boxAnimals {
@@ -713,7 +710,6 @@ html {
 .container {
   display: flex;
   /* coloca as caixas lado a lado */
-  background-color: #0b1e45;
   justify-content: center;
   align-items: flex-start;
   gap: 20px;
@@ -721,9 +717,9 @@ html {
   padding: 40px;
   text-align: center;
 }
+
 .container h2 {
   width: 100%;
-  color: #001f3f;
   margin-bottom: 30px;
   font-size: 200%;
 }
@@ -750,6 +746,7 @@ html {
   margin-bottom: 15px;
   border-bottom: 2px solid rgba(255, 255, 255, 0.5);
   padding-bottom: 5px;
+  font-size: 26px;
 }
 
 /* Responsividade para celular */
@@ -813,7 +810,6 @@ html {
   max-width: 800px;
   margin: auto;
   text-align: left;
-
 }
 
 .atracoes li {
@@ -833,6 +829,9 @@ html {
 
 .container h2 {
   color: #173c75;
+  background-color: white;
+  border-radius: 10px;
+  padding: 1%;
 }
 
 .attraction {
@@ -848,6 +847,10 @@ html {
   border-radius: 8px;
   border: 2px solid #173c75;
   transition: transform 0.3s;
+}
+
+.attraction h3 {
+  color: #001f3f;
 }
 
 .attraction img:hover {
